# jobsmith

./: .env.example  .gitignore  README.en.md  README.md  README.zh-TW.md  desktop.py  jobsmith-macos.spec  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: macos-unsigned.yml
app/: __init__.py  cli.py  graph.py  llm.py  llm_cli.py  models.py  server.py  settings.py  state.py  telemetry.py
app/agents/: cover_letter.py  critic.py  interview.py  interview_sim.py  job_search.py  resume.py  resume_eval.py  skill_gap.py  skill_lexicon.py  supervisor.py
app/evals/: fixtures.py  harness.py
app/export/: docx_export.py
app/intake/: jd_fetch.py
app/sources/: experience.py  registry.py  salary.py  source_104.py  source_cake.py  source_linkedin.py  source_yourator.py
app/store/: db.py  history.py  memory.py  searches.py
app/web/: index.html
docs/: PRIVACY.md  RELEASE_CHECKLIST.md
docs/release_qa/: v0.1.0-initial-qa.md
docs/superpowers/plans/: 2026-06-23-taiwan-ai-job-copilot-m1.md  2026-06-24-product-grade-m9.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  sampleResume.ts  sse.ts  types.ts
frontend/src/components/: BackendSelector.tsx  Dashboard.tsx  ExecutionSettings.tsx  FirstRunGuide.tsx  GithubStar.tsx  IssueCard.tsx  Onboarding.tsx  (+4 more)
frontend/tests/: fitFilter.test.mjs  jobExperience.test.mjs  localModels.test.mjs  pagination.test.mjs  salaryFilter.test.mjs
tests/: conftest.py  test_cli.py  test_cover_letter.py  test_critic.py  test_docx_export.py  test_evals.py  test_graph.py  test_history.py  test_interview.py  test_interview_sim.py  test_jd_fetch.py  test_job_experience.py  test_job_salary.py  test_job_search.py  test_llm_backend.py  test_llm_cli.py  test_memory.py  test_models.py  test_persistence.py  test_resume.py  test_resume_eval.py  test_searches.py  test_server.py  test_settings.py  test_skill_gap.py  test_sources.py  test_supervisor.py  test_telemetry.py
(+28 files in other folders)
