[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobsmith"
version = "0.1.3"
description = "A local-first, multi-agent job-search co-pilot for the Taiwan market — find jobs, audit your résumé, generate tailored application packages, and run mock interviews."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "kevin333353" }]
keywords = ["langgraph", "multi-agent", "job-search", "llm", "taiwan", "resume", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Natural Language :: Chinese (Traditional)",
]
dependencies = [
    "langgraph>=1.2,<1.3",
    "langgraph-checkpoint-sqlite>=3.1,<3.2",
    "langchain-anthropic>=1.4,<1.5",
    "langchain-openai>=1.3,<1.4",
    "langchain-core>=1.4,<1.5",
    "pydantic>=2.13,<3.0",
    "python-dotenv>=1.0,<2.0",
    "requests>=2.31,<3.0",
    "fastapi>=0.138,<0.139",
    "uvicorn[standard]>=0.49,<0.50",
    "httpx>=0.27,<1.0",
    "pypdf>=4.0,<7.0",
    "python-docx>=1.1,<2.0",
    "python-multipart>=0.0.9,<1.0",
    "beautifulsoup4>=4.12,<5.0",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.0,<7.0"]
build = ["pyinstaller>=6.0,<7.0"]
dev = ["pytest>=8.0,<10.0", "ruff>=0.5,<1.0"]

[project.urls]
Homepage = "https://github.com/kevin333353/jobsmith"
Repository = "https://github.com/kevin333353/jobsmith"

[tool.setuptools.packages.find]
include = ["app", "app.*"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "live: 會真正呼叫 Anthropic API 的測試（預設略過，需 -m live 才跑）",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
